Fix overflow. Add hd lex img. Add margins to main components.

--- a/src/scss/socialMedia.scss
+++ b/src/scss/socialMedia.scss
@@ -26,26 +26,26 @@
 .skype {
 	&:hover {
 		.logo {
-			background-position: -55px -18px;
+			background-position: -54.5px -18px;
 		}
 	}
 
 	.logo {
 		width: 16px;
-		background-position: -55px 0px;
+		background-position: -54.5px 0px;
 	}
 }
 
 .linkedin {
 	&:hover {
 		.logo {
-			background-position: -35px -18px;
+			background-position: -34px -18px;
 		}
 	}
 
 	.logo {
 		width: 20px;
-		background-position: -35px 0px;
+		background-position: -34px 0px;
 	}
 }
 
