--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,7 +38,7 @@
 	padding: 20px 40px;
 
 	@media screen and (max-width: 992px) {
-		padding: 0;
+		padding: 0 15px;
 	}
 }
 
